--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <th>subject</th>
         <th>rating</th>
       </tr>
-    <td><img src = "D:\sunaina\IMG-20230702-WA0093.jpg"\"D:\sunaina\New folder\WhatsApp Image 2023-12-24 at 20.02.38_543f5567.jpg"alt ="nayana's pic" height=300px width=200px
+    <td><img src = "images/https://github.com/NayanaArjunM/cv/blob/main/images/images/IMG-20230702-WA0093.jpg"alt ="nayana's pic" height=300px width=200px
 "/>
 <td><h1> NAYANA A</h1>
     <p> i love &#127990; and i am <em>student</em> of <strong>NCMS</strong> which is in <i>chikkaballapur</i></p>
