--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
         <th>subject</th>
         <th>rating</th>
       </tr>
-    <td><img src ="image1.jpg" alt ="nayana's pic" height="300px" width="200px"/>
-<td><h1> NAYANA A</h1>
+    <td><img src="image1.jpg" alt ="nayana's pic" height="300px" width="200px"/>
+</td><h1> NAYANA A</h1>
     <p> i love &#127990; and i am <em>student</em> of <strong>NCMS</strong> which is in <i>chikkaballapur</i></p>
     <p>I love my family </p>
     <p> i love emoji &#129528;</p>
